Add option for refresh token cookie

--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
-    "jsonwebtoken": "^8.1.0"
+    "jsonwebtoken": "^8.1.0",
+    "moment": "^2.20.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.5"
