--- a/app/package.json
+++ b/app/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start:encrypted": "cross-env JWT_ENCRYPTION_KEY=1234567890123456 nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "cross-env": "^7.0.2",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "moment": "^2.20.1"
